# FORECAST-USDPEN

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  =2.0  Chronos.ipynb  LSTM_NIVELES.ipynb  MODELO FINAL NIVELES.ipynb  MOIRAI.ipynb  README.md  TIMESFM.ipynb  monthly_data.csv  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: ARCHITECTURE.md
notebooks/: 0_refactored_Chronos.ipynb  0_refactored_LSTM.ipynb
src/forecast_usdpen/: cli.py
src/forecast_usdpen/forecasting/: backtesting.py  pipeline.py
src/forecast_usdpen/io/: data_loaders.py
src/forecast_usdpen/models/: base.py  chronos_adapter.py  evaluator.py  lstm_levels.py  moirai_adapter.py  timesfm_adapter.py
src/forecast_usdpen/preprocessing/: transforms.py
src/forecast_usdpen/viz/: plots.py
tests/: conftest.py  test_io.py  test_models_adapters.py  test_pipeline.py
